fix(web): adjust css spacings

--- a/apps/fed-web/src/views/node/initializers/loadavg/loadavg.css
+++ b/apps/fed-web/src/views/node/initializers/loadavg/loadavg.css
@@ -1,5 +1,5 @@
 .loadavg-data {
-	gap: 2em;
+	gap: 1.7em;
 	margin: auto;
 	padding: 0 1.5em;
 }
