--- a/apps/fed-web/src/views/node/visualizers/os/title.css
+++ b/apps/fed-web/src/views/node/visualizers/os/title.css
@@ -16,7 +16,7 @@
 	}
 
 	.subtitle-host {
-		margin-top: 2em;
+		margin-top: 4em;
 		text-align: center;
 	}
 }
